--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,203 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*variables of colors*/
+:root{
+  --color-primary:#e20712;
+  --color-secondary:#8d0007;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*style for app js*/
+.App{
+  font-family: 'Almarai', sans-serif;
+  height: 100%;
+}
+body{
+  background-color: black !important;
+}
+/*style for navbar*/
+.navbar{
+  background-color: transparent !important;
+    position: absolute !important;
+    z-index: 101 !important;
+    top: 0;
+    width: 100%;
+}
+.search-btn{
+  color: white;
+  background-color: var(--color-primary) !important;
+  border: none !important;
+  transition: all 0.3s;
+  font-weight: bold;
+}
+.search-btn:hover{
+  background-color: white !important;
+  color: var(--color-primary) !important;
+}
+.logo{
+  width:70px;
+}
+.logo img{
+  max-width: 100%;
+  max-height: 100%;
+}
+.nav-item{
+  background: var(--color-primary);
+    border-radius: 8px;
+    color: white !important;
+    margin-right: 10px;
+    margin-bottom:3px;
+    padding: 5px 10px;
+}
+.link{
+  text-decoration: none;
+  color: white;
+}
+.nav-item:hover{
+  background-color: var(--color-secondary);
+}
+.active-class{
+  background-color: var(--color-secondary);
+}
+/*style for landing*/
+.landing{
+  background-image: url('./imgs/banner.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 70vh;
+  position:relative;
+  top: -23px;
+}
+.overlay{
+  position:absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0,70%);
+}
+.title{
+  position: relative;
+    z-index: 100;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+.title h1{
+  font-size: 45px;
+    font-weight: bold;
+    width: 500px;
+}
+/*style for movies list*/
+.card{
+  height: 400px !important;
+  width: 250px !important;
+  border: none !important;
+  /* box-shadow: 3px 3px 20px 0px var(--color-primary); */
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+.card:hover .card-overlay{
+  top: 0;
+}
+.card:hover .card-img{
+  transform: scale(1.3);
+}
+.card-img{
+  height: 100% !important;
+  width: 100%;
+  transition: all 0.3s;
+}
+.card-overlay{
+  position:absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0,60%);
+  transition: all 0.3s;
+  color: white;
+  top:-100%;
+  text-align: center;
+  padding-top:100px;
+}
+/*pages style*/
+.page{
+  margin-top: 100px !important;
+  margin: 0;
+  padding: 0;
+}
+/*pagenation style*/
+.page-item.active .page-link{
+  background-color: var(--color-secondary) !important;
+  box-shadow: 2px 2px 0px var(--color-primary) !important;
+}
+.page-link,
+.previous,.next{
+  color: white !important;
+  font-weight: bold;
+  font-size:18px;
+  background-color: var(--color-primary) !important;
+  width:fit-content;
+  height:40px;
+  border-radius:10px;
+  padding: 3px 5px;
+  margin: 0 5px;
+  transition: all 0.3s;
+  box-shadow: 2px 2px 0px var(--color-secondary);
+  border: none !important;
+}
+.page-link:hover,
+.previous:hover,
+.next:hover{
+  background-color: var(--color-secondary) !important;
+  box-shadow: 2px 2px 0px var(--color-primary) !important;
+}
+.previous,
+.next{
+  width: fit-content;
+  height: fit-content;
+  border-radius:10px;
+}
+.previous a,
+.next a{
+  text-decoration: none;
+  color: white;
+}
+.previous:hover a,
+.next:hover a{
+  color: white;
+}
+/*movie details style*/
+.movie-details{
+  margin-top: 100px;
+}
+.movie-details .section{
+  height:300px;
+  padding:50px;
+  text-align: right;
+  color: white;
+  /* background-color: #282727;
+  border-radius: 20px; */
+}
+.movie-details .img-section{
+  height: 400px !important;
+  padding: 0;
+}
+.movie-details .details-img{
+  width:300px;
+  max-width: 100%;
+  height: 100%;
+  border-radius: 20px;
+}
+.details-btn,
+.details-btn2{
+  background-color: var(--color-primary);
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  padding: 5px 10px;
+  border-radius: 10px;
+  margin-right: 5px;
+  transition: all 0.3s;
+}
+.details-btn:hover,
+.details-btn2:hover{
+  background-color: var(--color-secondary);
 }
