--- a/src/index.css
+++ b/src/index.css
@@ -199,3 +199,24 @@ body{
 .details-btn2:hover{
   background-color: var(--color-secondary);
 }
+
+/* loading spinner */
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #FFF;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
